--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
+<script src="uv.bundle.js"></script>
 <script src=""></script>
-<script src=""></script>
-<script src="index.js"></script>
+<script src="indept>
