--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script src="uv.bundle.js"></script>
 <script src="uv.config.js"></script>
 <script src="uv.sw.js"></script>
-<script src=""></script>
+<script src="index.js"></script>
