--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <script src="uv.config.js"></script>
 <script src="uv.sw.js"></script>
 <script src="index.js"></script>
+<iframe src="" width=100vh height=100vh></iframe>
