--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <script src="uv.config.js"></script>
 <script src="uv.sw.js"></script>
 <script src="index.js"></script>
-<iframe src="" width=100vh height=100vh></iframe>
+<iframe src="https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&amp;lang=en_US&amp;asset-id=01_15494ab6-efdd-4280-acbc-c740673f17b4" width=100vh height=100vh"></iframe>
