--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<body>
 <script src="uv.bundle.js"></script>
 <script src="uv.config.js"></script>
 <script src="uv.sw.js"></script>
