--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html>
-<head> 
-  <body>
-    <script src="uv.bundle.js"></script>
-    <script src="uv.config.js"></script>
-    <script src="uv.sw.js"></script>
-    <script src="index.js"></script>
-    <iframe src="https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&amp;lang=en_US&amp;asset-id=01_15494ab6-efdd-4280-acbc-c740673f17b4" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    </iframe>
-  </body>
- </head>
-</html>
+<link type=application/
