--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
   <body>
-    <script src="images/uv.bundle.js"></script>
-    <script src="images/uv.config.js"></script>
-    <script src="images/go.js"></script>
+    <script src="images/Ultraviolet-App-main.zip"></script>
     <a onclick="go('https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&amp;lang=en_US&amp;asset-id=01_15494ab6-efdd-4280-acbc-c740673f17b4')">
   </body>
 </html>
